crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__timestamps@after_strict_Millisecond.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Timestamp(
        TimestampFilter(After 2025-09-23 11:47:01Z),
    ),
    field: Field {
        name: "column",
        data_type: Timestamp(
            Millisecond,
            None,
        ),
    },
    unfiltered: PrimitiveArray<Timestamp(ms)>
    [
      2025-09-23T11:47:00,
      2025-09-23T10:47:00,
      2025-09-22T11:47:00,
      2024-09-23T11:47:00,
      2025-09-23T12:47:00,
      2025-09-24T11:47:00,
      2026-09-23T11:47:00,
    ],
    filtered: PrimitiveArray<Timestamp(ms)>
    [
      2025-09-23T12:47:00,
      2025-09-24T11:47:00,
      2026-09-23T11:47:00,
    ],
}
